--- a/dog-blog.html
+++ b/dog-blog.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title> My Dog</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <h1> What does my dog like to do?</h1>
@@ -17,6 +18,7 @@
     <li>teddy bear</li>
     <li>bone</li>
   </ol>
-<p> DONE BY:SHATHA and KATIE </p>
+<p class="cross"> DONE BY:SHATHA and KATIE </p>
+<p> Justin Carothers and KATIE</p>
 </body>
 </html>
