--- a/dog-blog.html
+++ b/dog-blog.html
@@ -19,6 +19,7 @@
     <li>bone</li>
   </ol>
 <p class="cross"> DONE BY:SHATHA and KATIE </p>
-<p> Justin Carothers and KATIE</p>
+<p class="cross">Justin Carothers and KATIE</p>
+<p>Corrected by Maarja and Katie</p>
 </body>
 </html>
